@@ -1,13 +1,13 @@
 
 Needed for 0.2:
 
+o improve iterators: serialize/unserialize
 o igraph_i_attribute_add_edges should supply the ids of the new edges, or
   the edges themselves.....
 o add references to SNA, paper by Carter
 o for almost all functions: add progress handlers and allow
   them to be interrupted using IGRAPH_ALLOW_INTERRUPTION()
 o uniform graph operators (union, intersection, etc...)
-o rewrite attributes
 o merging layouts properly, multicompartmental layout functions
 o make CTRL+C work in R
 o better random number generator handling (init with seed, etc...)
